finished form, fixed banner overflow

--- a/styles/components/form.css
+++ b/styles/components/form.css
@@ -1,14 +1,32 @@
 .form-section {
     background-color: var(--blue);
-    background-image: url();
     border-radius: 8px;
     margin-bottom: 32px;
     text-align: center;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
 }
 
 .form-content {
     width: 80%;
     margin: 0 auto;
+    overflow: hidden;
+}
+
+.form-section::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    background-image: url(../../resources/img/big_slack_logo.svg);
+    background-repeat: no-repeat;
+    height: 180%;
+    transform: rotate(-40deg);
+    background-position: center;
+    top: -150px;
+    left: 480px;
+    z-index: -1;
+    opacity: 0.1;
 }
 
 .slack-logo {
@@ -27,7 +45,7 @@
 
 .form-text {
     color: #fff;
-    font-size: 28px;
+    font-size: 24px;
     word-spacing: 4px;
     margin-bottom: 32px;
 }
