--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,12 +34,12 @@
 
 body {
     background-color: #fafafa;
+    overflow-x: hidden;
 }
 
 .main-container {
     width: 80%;
     margin: 0 auto;
-    max-width: 1200px;
 }
 
 .wide-container {
